# AskAtlas

./: .env.local  .gitignore  CONTRIBUTING.md  README.md
api/scripts/seed_demo/: .gitignore  README.md  pyproject.toml
api/scripts/seed_demo/data/: attributions.json
api/scripts/seed_demo/fixtures/: files.yaml  resources.yaml
api/scripts/seed_demo/fixtures/files_local/: assemble_yaml.py  build.sh
api/scripts/seed_demo/fixtures/guides/stanford-cs106a/: cs106a-control-flow.md  cs106a-debugging-techniques.md  cs106a-dictionaries.md  cs106a-file-io.md  cs106a-functions-and-scope.md  cs106a-list-comprehensions.md  cs106a-lists.md  cs106a-midterm-review.md  cs106a-oop-classes.md  cs106a-python-intro.md  cs106a-recursion.md
api/scripts/seed_demo/fixtures/guides/stanford-cs161/: cs161-asymptotic-analysis.md  cs161-divide-and-conquer.md  cs161-dynamic-programming.md  cs161-graph-algorithms.md  cs161-greedy-algorithms.md  cs161-hash-tables.md  cs161-master-theorem.md  cs161-np-completeness.md  cs161-sorting-algorithms.md
api/scripts/seed_demo/fixtures/guides/stanford-hist1b/: hist1b-age-of-revolutions.md  hist1b-close-reading-method.md  (+5 more)
api/scripts/seed_demo/seed_demo/: __main__.py  catalogs.py  cli.py
api/scripts/seed_demo/seed_demo/api_client/: __init__.py
api/scripts/seed_demo/seed_demo/corpus/: attributions.py  guides.py  liveness.py  loaders.py  models.py  quizzes.py  validator.py
api/scripts/seed_demo/seed_demo/seeder/: distributions.py  ids.py  placeholders.py
api/scripts/seed_demo/tests/: conftest.py  test_attributions.py  test_guides_loader.py  test_liveness.py  test_loaders.py  test_quizzes_loader.py  test_validator.py
api/scripts/seed_demo/tests/seeder/: test_distributions.py  test_ids.py  test_placeholders.py
(+1205 files in other folders)
