[project]
name = "seed-demo"
version = "0.1.0"
description = "AskAtlas demo data seeder — fixture validator, license checker, attribution generator"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["seed_demo"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "PT", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# assemble_yaml.py is a data-declaration file: long attribution strings and
# URLs are unavoidable and wrapping them would hurt readability.
"fixtures/files_local/assemble_yaml.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
